code refactor in several places in order to improve modularity and readability, add tests, created factory objects for better modularity